<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        android:textAlignment="center"
        />

    <item
        android:id="@+id/parental_lock_on"
        android:icon="@drawable/lock"
        android:title="parental_lock_on"
        app:showAsAction="always" />

    <item
        android:id="@+id/parental_lock_off"
        android:icon="@drawable/unlock"
        android:title="parental_lock_off"
        app:showAsAction="always" />
</menu>