...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/queueList"
        app:layout_constraintTop_toBottomOf="@+id/play_previous_button">

        <ListView
            android:id="@+id/songList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            app:layout_constraintBottom_toTopOf="@+id/queueList"
            app:layout_constraintTop_toBottomOf="@+id/play_previous_button" />

...
